# Loque

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Database.md  JSON  JSON.md  README.md  Tables.md  levelsettingsdialog.h  levelsettingsdialog.ui  loque  mactutorial.md  makeHTML  template.html  test.html
assets/: candyland.tmx  readme.txt
assets/maps/: candyland.tmx
assets/sound_effects/: freed_v12(rattle).m4a  is44c_whoosh1.m4a  readme.txt
game-client/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  linuxtutorial.md  loque  windowstutorial.md
game-client/arch/mingw-w64-tmxlite/: PKGBUILD
game-client/assets/: Castle_Level_1.tmx  Castle_Level_2.tmx  Platform_Level_1.tmx  Platform_Level_2.tmx  Zapper_Level_1.tmx  Zapper_Level_2.tmx  Zapper_Level_3.tmx  candyland.tmx  readme.txt
game-client/assets/assets_miscellany/Platformer Art Complete Pack/Base pack/Tiles/: createtileset.sh
game-client/assets/assets_miscellany/sound_effects/: dream4dreamtheater_blah(blah_speech).m4a
game-client/assets/images/: MathSpritesheet.xcf  dash_dust.xcf  dash_dust_white.xcf  dungeon.json  math_man_texturepacker.tps  veemon.xcf
game-client/assets/images/Thumbnails/: Zapper_Level_2.psd
game-client/assets/shaders/: blur.frag  wobble.frag
game-client/modules/: FindTMXLITE.cmake
game-client/src/: .#laser.h  AnimatedSprite.cpp  DebugDraw.cpp  DebugDraw.h  SFMLOrthogonalLayer.hpp  background.cpp  background.h  contactlistener.cpp  contactlistener.h  dust.cpp  dust.h  entity.cpp  entity.h  exit.cpp  exit.h  hud.cpp  hud.h  killbox.cpp  killbox.h  laser.cpp  laser.h  lava.cpp  lava.h  layer.cpp  layer.h  main.cpp  map.cpp  map.h  physicalworld.cpp  physicalworld.h  physicsdebug.cpp  physicsdebug.h  player.cpp  player.h  playerspawn.cpp  playerspawn.h  playerstate.cpp  playerstate.h  playerstats.cpp  playerstats.h  (+12 more)
portal/: CMakeLists.txt  adminpane.h  adminplaypane.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.ui  portal.pro  registerpane.ui  resources.qrc  studentplaypane.cpp
portal/assets/: Platform_Level_1.psd  styles.qss
portal/include/: addclassdialog.h  adminpane.h  adminsidebar.h  classtab.h  createclassdialog.h  deleteclassconfirmation.h  launchgame.h  levelsettingsdialog.h  loginpane.h  mainwindow.h  registerpane.h  report.h  studentplaypane.h
portal/src/: addclassdialog.cpp  addclassdialog.ui  adminpane.cpp  adminpane.ui  adminplaypane.cpp  adminplaypane.ui  adminsidebar.cpp  adminsidebar.ui  classtab.cpp  classtab.ui  createclassdialog.cpp  deleteclassconfirmation.cpp  deleteclassconfirmation.ui  launchgame.cpp  levelsettingsdialog.cpp  levelsettingsdialog.ui  loginpane.cpp  loginpane.ui  main.cpp  mainwindow.cpp  mainwindow.ui  registerpane.cpp  registerpane.ui  report.cpp  studentplaypane.cpp  studentplaypane.ui
server/: API.md  CMakeLists.txt  Database.md  README.md  TODO.txt  server
server/include/: serverutil.h
server/modules/: FindMySQLConnectorCPP.cmake
server/src/: main.cpp  serverutil.cpp  serverutil.h
shared/: README.md  clientserver.h  compile.sh  loqueclient.cpp  loqueclient.h  loqueclient_test  loqueclient_test.cpp  serialization.h
src/: SFMLOrthogonalLayer.hpp  entity.cpp  entity.h  main.cpp  resource.cpp  resource.h  world.cpp  world.h
